# soulful-companion

./: .gitignore  Cargo.toml  LICENSE  README.md  build-pi.sh
resources/: conf.yaml
src/: lib.rs  main.rs
src/berry_imu/: berry_imu_controller.rs  mod.rs
src/color/: color_converter.rs  hsl.rs  mod.rs  rgb.rs
src/config/: config.rs  mod.rs
src/io/: io.rs  mod.rs
src/led/: color_modifier.rs  controller.rs  mod.rs
src/schedule/: mod.rs  scheduler.rs
src/time/: action_timer.rs  mod.rs
