[package]
name = "soulful-companion"
version = "0.1.0"
authors = ["twtc <raner.piibur@gmail.com>"]

[dependencies]
serde = "1.0.2"
serde_yaml = "0.7.0"
serde_derive = "1.0.2"
chrono = "0.3.0"
uuid = { version = "0.5.0", features = ["v4"] }
tokio-core = "0.1.7"
tokio-timer = "0.1.1"
futures = "0.1.13"
futures-cpupool = "0.1.5"
i2cdev = "0.3.1"